@@ -9,6 +9,11 @@
 <?php
 	db_connect( $g_hostname, $g_db_username, $g_db_password, $g_database_name );
 
+	# if user below view summary threshold, then re-direct to mainpage.
+	if ( !access_level_check_greater_or_equal( $g_view_summary_threshold ) ) {
+		print_header_redirect( 'main_page.php' );
+	}
+
 	#checking if it's a per project statistic or all projects
 	if ($g_project_cookie_val=='0000000') {
 		$specific_where = ' 1=1';
